# mcp-apple-music

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
src/mcp_apple_music/: __init__.py  auth.py  client.py  server.py  setup.py
